            - The configuration block for Calendars has been improved.
        * Persons :
            - The staff users are not related to Contacts anymore.
              Note: the existing Contacts which were related to staff users are sent to the trash.
            - A button to transform a Contact into a user has been added.
        * Reports :
            - You can now create filters which are reserved to Reports.
            - The Graphes using Relationships have been improved :
                 - the SQL queries should be more efficient.
                 - the entities in abscissa are now ordered by their name.
                 - the length of the URL to list-view remains always short (& so it avoids issue with URLs which reach the server's limit).
            - The date fields of referenced models can be used for temporal filtering in the Reports
              (e.g. in a report on Contacts, Photograph's fields are available).
            - The fields with 'choices' (e.g. status of EntityEmails) can now be used as Graphes' abscissa.
            - A new type of chart is available: 'linechart'.
            - Graphs with an enumerable abscissa are now using its color if exists (e.g. billing status).
        * Assistants :
            - The UserMessages produce now notifications (so users can chose to be notified in their browser, emails are not the only way anymore).
        * Billing :
            - You can now define the default statuses (which are notably used as initial values in creation forms).
              You can also define the Invoice status to use when a number ins generated.
            - When you clone an Invoice, the status is not copied anymore; the new Invoice gets the default status instead.
        * Emails :
            - The spam score of sent emails should be better :
                - the header contains a "Message-ID" which matches the host domain.
                - the "content-ID" of inline images matches the host domain.