@@ -1,6 +1,6 @@
 ################################################################################
 #    Creme is a free/open-source Customer Relationship Management software
-#    Copyright (C) 2009-2023  Hybird
+#    Copyright (C) 2009-2024  Hybird
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU Affero General Public License as published by
@@ -54,6 +54,20 @@ class DurationField(models.CharField):
 
 class UnsafeHTMLField(models.TextField):
     pass
+
+
+class CremeURLField(models.CharField):
+    """URLField which does not validate the URL validity.
+    URL validation is hard:
+     - The Django's validator does not work with local URLs without domain
+     - The Django's validator wants a protocol (https, https), but data imported
+       data (from CSV, .xls, ...) generally does not have a protocol, causing
+       import errors. We could add a protocol, but which one?
+     - etc...
+    So this field exists only to get a cool display of the data (i.e. <a> tag).
+    """
+    default_validators = []  # NOPE
+    description = _('URL (no validation)')
 
 
 class ColorField(models.CharField):
@@ -533,7 +547,7 @@ class BasicAutoField(models.PositiveIntegerField):
 ################################################################################
 #  Copyright (c) 2007  Michael Trier
 #  Copyright (C) 2014  http://trbs.net
-#  Copyright (C) 2009-2023  Hybird
+#  Copyright (C) 2009-2024  Hybird
 #
 #  Permission is hereby granted, free of charge, to any person obtaining a copy
 #  of this software and associated documentation files (the "Software"), to deal
