@@ -154,7 +154,8 @@ class Migration(migrations.Migration):
                 ('skype', models.CharField(max_length=100, verbose_name='Skype', blank=True)),
                 ('fax', models.CharField(max_length=100, verbose_name='Fax', blank=True)),
                 ('email', models.EmailField(max_length=254, verbose_name='Email address', blank=True)),
-                ('url_site', models.URLField(max_length=500, verbose_name='Web Site', blank=True)),
+                # ('url_site', models.URLField(max_length=500, verbose_name='Web Site', blank=True)),
+                ('url_site', core_fields.CremeURLField(max_length=500, verbose_name='Web Site', blank=True)),
                 ('birthday', models.DateField(null=True, verbose_name='Birthday', blank=True)),
                 (
                     'billing_address',
@@ -241,7 +242,8 @@ class Migration(migrations.Migration):
                 ('phone', core_fields.PhoneField(max_length=100, verbose_name='Phone', blank=True)),
                 ('fax', models.CharField(max_length=100, verbose_name='Fax', blank=True)),
                 ('email', models.EmailField(max_length=254, verbose_name='Email address', blank=True)),
-                ('url_site', models.URLField(max_length=500, verbose_name='Web Site', blank=True)),
+                # ('url_site', models.URLField(max_length=500, verbose_name='Web Site', blank=True)),
+                ('url_site', core_fields.CremeURLField(max_length=500, verbose_name='Web Site', blank=True)),
                 ('capital', models.PositiveIntegerField(null=True, verbose_name='Capital', blank=True)),
                 ('siren', models.CharField(max_length=100, verbose_name='SIREN', blank=True)),
                 ('naf', models.CharField(max_length=100, verbose_name='NAF code', blank=True)),
